2006-07-20 Raphael Neider <rneider AT web.de>

	* src/pic/device.c (addMemRange,assignRegister): suppress verbose
	  output unless SDCCPICDEBUG is set
	* device/lib/pic16/Makefile.rules (%.lib target): suppress verbose
	  output if SILENT is set

2006-07-11 Borut Razem <borut.razem AT siol.net>

	* doc/README.txt: updated

2006-07-10 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added device/include/asm/pic/features.h and
	  device/lib/src/pic/libm/*.c and device/lib/src/pic16/libsdcc/stack/*.S
	  in WIN32 installation
	* .version, sdcc.spec, doc/sdccman.lyx: changed sdcc version to 2.6.0 -
	  release candidate 1

2006-07-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/XC866.h: added sbit definitions for Px_x, P1_x, P2_x
	* src/pic16/glue.c (initPointer): fixed bug 1496419 for pic16

2006-07-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/hc08/gen.c (genAddrOf): fixed bug when offset on stack is >127

2006-07-06 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bitfields.c:
	  fixed bug [ 1518322 ] regression test bitfields fails on ppc hosts
	* support/regression/tests/constantRange.c:
	  fixed bug [ 1518317 ] regression test constantRange fails on alpha host

2006-07-04 Borut Razem <borut.razem AT siol.net>

	* src/configure.in, src/configure, src/Makefile.in, as/z80/Makefile.in,
	  src/port.mk,
	  src/avr/Makefile.in, src/ds390/Makefile.in, src/ds400/Makefile.in,
	  src/hc08/Makefile.in, src/mcs51/Makefile.in, src/pic16/Makefile.in,
	  src/pic/Makefile.in, src/xa51/Makefile.in, src/z80/Makefile.in:
	  reverted changes from 2006-07-03
	* Makefile.common.in: added @CPPFLAGS@ to CPPFLAGS
	* support/regression/Makefile.in, support/regression/ports/host/spec.mk:
	  added CPPFLAGS, used by the host port

2006-07-03 Bernhard Held <bernhard AT bernhardheld.de>

	* support/regression/valdiag/tests/switch.c,
	* support/regression/valdiag/tests/constantRange.c: adapted to gcc 4